# FunnyLLM

./: .env.example  .gitignore  README.md  check_dataset_stats.py  pq_to_txt.py  pyproject.toml  test_extract.py  test_fetch.py  test_generate.py  test_tokenizer.py  train_tokenizer.py
model/: network.py  train.py
utils/: extract.py  fetch.py
