[project]
name = "funnyllm"
version = "1.0.0"
description = "LLM that can generate anecdotes in Russian"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "markupsafe<3",
    "pyarrow>=22.0.0",
    "ruff>=0.14.10",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.66.5",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu130"
